# scorbot_control_2

./: README.md
scorbot_control_2/: CMakeLists.txt  package.xml
scorbot_control_2/config/: Trajectory_controllers.yaml  joint_state_controller.yaml  scorbot_config.yaml
scorbot_control_2/include/scorbot_control_2/: scorbot_interface.h
scorbot_control_2/launch/: controller.launch  gazebo.launch
scorbot_control_2/rviz/: scorbot.rviz
scorbot_control_2/src/: angle_converter.cpp  scorbot_interface.cpp  scorbot_interface_2.cpp  simple_timer.cpp
scorbot_control_2/srv/: angleConverter.srv
scorbot_control_2/urdf/: arduinobot.urdf.xacro  arm_world_frame.urdf  arm_world_frame.urdf.xacro  scorbot.urdf.xacro  scorbot.xacro  scorbot_des.xacro  scorbot_fixed_to_ground.urdf.xacro
scorbot_moveit_2/: CMakeLists.txt  package.xml
scorbot_moveit_2/config/: fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  ros_controllers.yaml  scorbot.srdf
scorbot_moveit_2/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  scorbot_moveit_controller_manager.launch.xml  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
